--- a/api/package.json
+++ b/api/package.json
@@ -24,9 +24,13 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/typeorm": "^8.0.3",
+    "pg": "^8.7.3",
+    "postgres": "^3.0.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "typeorm": "^0.3.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
